Testes automatizados (14) + fix StaticFieldLeak + limpeza de resources mortos